@@ -44,12 +44,19 @@
     </Value>
   </CommandClass>
 
+  <CommandClass id="96" mapping="endpoints" />
+  
+  <!-- COMMAND_CLASS_BASIC does not respond to requests -->
+  <CommandClass id="32" action="remove" />
+  <!-- COMMAND_CLASS_ALARM. This class is in the list reported by the GreenWave PowerNode 1, but it does not respond to requests -->
+  <CommandClass id="113" action="remove" />
+      
   <!-- Association Groups -->
   <CommandClass id="133">
     <Associations num_groups="3">
-	  <Group index="1" max_associations="5" label="Relay 1 and 2 together" auto="true" />
-      <Group index="2" max_associations="5" label="Relay 1" auto="false" />
-      <Group index="3" max_associations="5" label="Relay 2" auto="false" />
+	  <Group index="1" max_associations="1" label="Relay 1 and 2 together" auto="false" />
+      <Group index="2" max_associations="1" label="Relay 1" auto="false" />
+      <Group index="3" max_associations="1" label="Relay 2" auto="false" />
     </Associations>
   </CommandClass>
 
